# open-aea-cosmpy

./: .wordlist.txt  HISTORY.md  pyproject.toml  tox.ini
.github/workflows/: workflow.yml
cosmpy/aerial/client/: __init__.py
cosmpy/aerial/contract/: __init__.py
docs/api/aerial/client/: __init__.md
