[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration (deselect with '-m \"not integration\"')",
    "flaky: marks tests as flaky (deselect with '-m \"not flaky\"')",
]

[tool.poetry]
name = "open-aea-cosmpy"
version = "0.6.4"
description = "A library for interacting with the cosmos networks"
authors = ["Fetch.AI Limited"]
readme = "README.md"
classifiers=[
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3 :: Only",
]
packages = [
    {include = "cosmpy"},
]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
ecdsa = "*"
bech32 = "*"
requests = "*"
protobuf = ">=4.21.6,<5"
grpcio = "==1.53.0"
blspy = "*"
google-api-python-client = "*"
jsonschema = ">=3.2.0,<5"
coincurve = "==18.0.0"
open-aea-bip-utils = "==2.7.2"


[tool.poetry.group.dev.dependencies]
check-manifest = "*"
tox = "==3.25.1"
flake8 = "==5.0.4"
black = "==23.1"
mypy = "==0.971"
bandit = "==1.7.4"
safety = "==2.4.0b1"
isort = "==5.10.1"
darglint = "==1.8.1"
vulture = "==2.5"
pylint = "==2.14.0"
liccheck = "==0.7.2"
flake8-copyright = "==0.2.3"
grpcio-tools = "==1.53.0"
flake8-bugbear = "==22.7.1"
flake8-eradicate = "==1.3.0"
flake8-docstrings = "==1.6.0"

[tool.poetry.group.docs.dependencies]
mkdocs-material = "==9.0.4"
pydoc-markdown = "==4.8.2"


[tool.poetry.group.test.dependencies]
coverage = "*"
pytest = "*"
pytest-rerunfailures = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

